--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ dependencies:
 - anaconda::python=3.6
 - anaconda::pandas==0.23.3
 - anaconda::matplotlib==2.2.0
+- anaconda::tensorflow==1.9.0
 - conda-forge::scikit-learn==0.19.2
 - conda-forge::notebook==5.6.0
 - conda-forge::keras==2.1.6
-- conda-forge::tensorflow==1.9.0
