--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas==0.23.3
 notebook==5.6.0
 matplotlib==2.2.2
-scipy=1.1.0
+scipy==1.1.0
 scikit-learn==0.19.2
 keras==2.1.6
 tensorflow==1.9.0
